Fix missalignment of buttons

--- a/blocks/products/products.css
+++ b/blocks/products/products.css
@@ -38,7 +38,7 @@
 }
 
 .product-card .button-container {
-  flex-grow: 1;
+  flex-grow: 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
